// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should render Table component 1`] = `
<DocumentFragment>
  <table
    class="table rounded bg-white"
  >
    <tbody>
      <tr>
        <td
          class="align-middle"
        >
          Label
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Table should render a column by content callback 1`] = `
<DocumentFragment>
  <table
    class="table rounded bg-white"
  >
    <tbody>
      <tr>
        <td
          class="align-middle"
        >
          <h1>
            Label
          </h1>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
